# domainator

./: .gitignore  CLAUDE.md  LICENSE.txt  MANIFEST.in  README.md  conda_env.yml  conda_env_arm64.yml  domainator.def  domainator_esmologs.def  package.sh  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: wheels.yml
docs/: README.md  developing_domainator.md  esm_3b_foldseek.md  examples.md  file_formats.md  genbank_performance.md  limitations_and_FAQ.md  web_server_design.md
docs/server/: README.md  adding_tools.md  overview.md
rust/: .gitignore  Cargo.toml
rust/src/: bgzf_compress.rs  bgzf_scan.rs  lib.rs  parser.rs
scripts/server/: generate_tool_schemas.py
server/: README.md  pyproject.toml
server/docs/: adding_tools.md
server/scripts/: generate_tool_schemas.py
server/src/domainator_server/: __init__.py  app.py  cli.py  config.py  file_manager.py  tool_executor.py  tool_registry.py
server/src/domainator_server/schemas/domainator/: build_projection.json  build_ssn.json  build_tree.json  color_genbank.json  color_table_to_legend.json  compare_contigs.json  deduplicate_genbank.json  domain_search.json  domainate.json  domainator_db_download.json  enum_report.json  extract_domains.json  extract_peptides.json  extract_unannotated.json  filter_domains.json  genbank_to_fasta.json  hmmer_build.json  hmmer_compare.json  hmmer_report.json  hmmer_search.json  hmmer_select.json  matrix_report.json  partition_seqfile.json  plot_contigs.json  select_by_cds.json  select_by_contig.json  seq_dist.json  summary_report.json  transform_matrix.json  trim_contigs.json
server/src/domainator_server/schemas/sample_tools/: domainate.json
server/src/domainator_server/schemas/sample_workflows/: genome_annotation.json
server/src/domainator_server/static/: app.js  styles.css  tool-category-config.json
server/src/domainator_server/templates/: index.html
server/src/domainator_server/workflows/: genome_annotation.py
server/tests/: conftest.py  test_app_files.py  test_app_jobs.py  test_app_tools.py  test_domainator_schemas.py  test_file_manager.py  test_tool_executor.py  test_tool_registry.py
src/domainator/: __init__.py  bgzf_compress.py  build_projection.py  build_ssn.py  build_ssn_viewer.py  build_tree.py  clean_sequences.py  color_genbank.py  color_table_to_legend.py  compare_contigs.py  cytoscape.py  data_matrix.py  db_index.py  deduplicate_genbank.py  domain_search.py  domainate.py  domainator_db_download.py  domainator_format_db.py  edge_types.py  enum_report.py  extract_domains.py  extract_peptides.py  extract_unannotated.py  filter_domains.py  find_features.py  foldseek.py  genbank_to_fasta.py  hmmer_build.py  hmmer_compare.py  hmmer_report.py  hmmer_search.py  hmmer_select.py  infernal_build.py  kmer_dist.py  lean_record.py  matrix_report.py  output_guardrails.py  partition_seqfile.py  partition_seqids.py  plot_contigs.py  (+13 more)
src/domainator/Bio/: File.py  LICENSE.rst  Seq.py  SeqFeature.py  SeqRecord.py  __init__.py
src/domainator/Bio/Data/: CodonTable.py
src/domainator/Bio/GenBank/: Scanner.py  __init__.py  utils.py
src/domainator/Bio/SeqIO/: FastaIO.py  InsdcIO.py  InsdcIO_new.py  Interfaces.py  SwissIO.py  TabIO.py  __init__.py
src/domainator/Bio/SeqUtils/: IsoelectricPoint.py  MeltingTemp.py  ProtParam.py  __init__.py
src/domainator/Bio/SwissProt/: __init__.py
src/domainator/Taxonomy/: __init__.py
src/domainator/server/: app.py  cli.py  config.py  file_manager.py  tool_executor.py
src/domainator/server/schemas/archived/: partition_seqfile.json
src/domainator/server/schemas/domainator/: build_projection.json  build_ssn.json  build_tree.json  clean_sequences.json  color_genbank.json  color_table_to_legend.json  compare_contigs.json  deduplicate_genbank.json  domain_search.json  (+25 more)
src/domainator/server/static/: app.js  styles.css  tool-category-config.json
src/domainator/server/templates/: index.html
test/: helpers.py  test_SeqFeature.py  test_build_projection.py  test_build_ssn.py  test_build_ssn_viewer.py  test_build_tree.py  test_clean_sequences.py  test_color_genbank.py  test_color_table_to_legend.py  test_compare_contigs.py  test_data_matrix.py  test_db_index.py  test_deduplicate_genbank.py  test_domain_search.py  test_domainate.py  test_domainator_db_download.py  test_domainator_format_db.py  test_enum_report.py  test_extract_domains.py  test_extract_peptides.py  test_extract_unannotated.py  test_filter_domains.py  test_find_features.py  test_foldseek.py  test_hmmer_build.py  test_hmmer_compare.py  test_hmmer_report.py  test_hmmer_search.py  test_hmmer_select.py  test_infernal_build.py  test_kmer_dist.py  test_lean_record.py  test_matrix_report.py  test_ncbi_taxonomy.py  test_partition_seqfile.py  test_partition_seqids.py  test_plot_contigs.py  test_select_by_cds.py  test_select_by_contig.py  test_select_by_coord.py  (+8 more)
test/data/: 206.gb  CcdB.hmm  CcdB.hmm.h3f  CcdB.hmm.h3i  CcdB.hmm.h3m  CcdB.hmm.h3p  CuSOD_enum_report_test.gb  FeSOD_20.fasta  FeSOD_20.gb  FeSOD_20_pfam.gb  FeSOD_dist.dense.hdf5  FeSOD_dist.sparse.hdf5  FeSOD_dist.tsv  FeSOD_metadata.tsv  FeSOD_pfam.hmm  FeSOD_score_dist.newick  FeSOD_score_dist.tsv  FeSOD_score_dist.xgmml  JABFVH010000506_extraction.gb  MT_nbs.enum_report.tsv  Peptidase_M28.hmm  Peptidase_M28.hmm.h3f  Peptidase_M28.hmm.h3i  Peptidase_M28.hmm.h3m  Peptidase_M28.hmm.h3p  Polymorphism_feature.gb  RF00042.cm  SPR.hmm  bacillus_phage_SPR.gb  bacillus_phage_SPR_with_annotations.gb  bacillus_phage_SPR_with_annotations_reversed.gb  bin3.sparse.hdf5  bin3.sparse.tsv  bin3.tsv  ccdb.gb  color_specification.tsv  color_table_123.tsv  domain_search_test_out1.gb  domain_search_test_out2.gb  domain_search_test_out3.gb  (+62 more)
test/data/foldseek/: FeSOD  FeSOD.index  FeSOD.lookup  FeSOD_20.3di.fasta  FeSOD_20.fasta  FeSOD_h  FeSOD_h.dbtype  FeSOD_h.index  FeSOD_ss
test/data/taxdmp/: delnodes.dmp  merged.dmp  names.dmp  nodes.dmp
test/server/: conftest.py  test_app_files.py  test_app_jobs.py  test_app_tools.py  test_domainator_schemas.py  test_file_manager.py  test_tool_executor.py  test_tool_registry.py
