[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-rust>=1.7"]
build-backend = "setuptools.build_meta"

# Optional native acceleration (domainator._gbfast). `optional = true` means a
# missing Rust toolchain does not fail the install; the Python code falls back to
# the Biopython parser, so correctness never depends on this extension.
[[tool.setuptools-rust.ext-modules]]
target = "domainator._gbfast"
path = "rust/Cargo.toml"
binding = "PyO3"
optional = true
# Always build optimized (release), including for editable installs.
debug = false

[tool.cibuildwheel]
# Build CPython wheels for the supported versions; skip 32-bit and musl.
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*_i686 *-musllinux_*"
# Verify the native extension actually compiled into the wheel. domainator's
# __init__ is lightweight, so importing _gbfast does not pull the heavy runtime
# deps.
test-command = "python -c \"from domainator import _gbfast; assert hasattr(_gbfast, 'parse_lean_search') and hasattr(_gbfast, 'genbank_offsets')\""

[tool.cibuildwheel.linux]
# manylinux_2_28 ships a modern toolchain; install Rust into the build container.
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal"
environment = { PATH = "$HOME/.cargo/bin:$PATH" }

[tool.cibuildwheel.macos]
# GitHub macOS runners have Rust preinstalled via rustup.
before-all = "rustup target add x86_64-apple-darwin aarch64-apple-darwin || true"

[tool.cibuildwheel.windows]
# GitHub Windows runners have Rust preinstalled.

[project]
name="domainator"
authors = [
    {name = "Sean Johnson", email = "sjohnson@neb.com"},
    {name = "Andrew Ge"},
    {name = "Yu-Cheng Lin"},
    {name = "Zhiyi Sun"}
]
description="A flexible and modular software suite for domain-based gene neighborhood and protein search, extraction, and clustering."
readme = "README.md"
requires-python = ">=3.10,<3.14"

classifiers=[
    "Programming Language :: Python :: 3",
]
license = "MIT"
dynamic = ["version"]
dependencies = [
    "pandas >=2.1.0",
    "seaborn >=0.13.0",
    "scipy >=1.11.2",
    "pyhmmer>=0.12.0,<0.13.0",
    "pyinfernal >=0.1.0, <0.2.0",
    "umap-learn >=0.5.4",
    "h5py >=3.9.0",
    "jsonargparse >=4.18.0",
    "Flask >=2.3",
    "Werkzeug >=2.3",
    "jsonschema >=4.0",
    "psutil >=5.9.6",
    "tqdm >=4.65.0",
    "pyrodigal >=3.0.1",
    "bashplotlib >=0.6.5",
    "requests >=2.31.0",
    "urllib3 >=2.0"
]

[project.optional-dependencies]
core = [
    "pandas >=2.1.0",
    "seaborn >=0.13.0",
    "scipy >=1.11.2",
    "pyhmmer>=0.12.0,<0.13.0",
    "pyinfernal >=0.1.0, <0.2.0",
    "umap-learn >=0.5.4",
    "h5py >=3.9.0",
    "jsonargparse >=4.18.0",
    "psutil >=5.9.6",
    "tqdm >=4.65.0",
    "pyrodigal >=3.0.1",
    "bashplotlib >=0.6.5",
    "requests >=2.31.0",
    "urllib3 >=2.0"
]
test = ["pytest >=7.4.2",
        "pytest-datadir~=1.4.1"]
# Browser-driven regression tests for the SSN viewer HTML. Not part of `test`
# because Playwright also needs a one-time browser download:
#   pip install -e ".[test,browser]" && playwright install chromium
# The tests in test/test_ssn_viewer_browser.py skip automatically when the
# `playwright` package is not importable.
browser = ["pytest-playwright >=0.4.0"]
# add dependency for Foldseek/ESM2 related stuff.

[project.urls]
Bug_Tracker = "https://github.com/nebiolabs/domainator/issues"


[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"domainator.server" = [
    "static/*.css",
    "static/*.js",
    "static/*.json",
    "static/*.svg",
    "templates/*.html",
    "schemas/**/*.json",
]


[tool.setuptools.dynamic]
version = {attr = "domainator.__version__"}

[project.scripts]
"build_projection.py" = "domainator:build_projection._entrypoint"
"build_ssn.py" = "domainator:build_ssn._entrypoint"
"build_ssn_viewer.py" = "domainator.build_ssn_viewer:_entrypoint"
"build_tree.py" = "domainator:build_tree._entrypoint"
"clean_sequences.py" = "domainator:clean_sequences._entrypoint"
"color_genbank.py" = "domainator:color_genbank._entrypoint"
"color_table_to_legend.py" = "domainator:color_table_to_legend._entrypoint"
"compare_contigs.py" = "domainator:compare_contigs._entrypoint"
"deduplicate_genbank.py" = "domainator:deduplicate_genbank._entrypoint"
"domain_search.py" = "domainator:domain_search._entrypoint"
"domainate.py" = "domainator:domainate._entrypoint"
"domainator_db_download.py" = "domainator:domainator_db_download._entrypoint"
"enum_report.py" = "domainator:enum_report._entrypoint"
"extract_domains.py" = "domainator:extract_domains._entrypoint"
"extract_peptides.py" = "domainator:extract_peptides._entrypoint"
"extract_unannotated.py" = "domainator:extract_unannotated._entrypoint"
"filter_domains.py" = "domainator:filter_domains._entrypoint"
"find_features.py" = "domainator:find_features._entrypoint"
"genbank_to_fasta.py" = "domainator:genbank_to_fasta._entrypoint"
"hmmer_build.py" = "domainator:hmmer_build._entrypoint"
"infernal_build.py" = "domainator:infernal_build._entrypoint"
"kmer_dist.py" = "domainator:kmer_dist._entrypoint"
"hmmer_compare.py" = "domainator:hmmer_compare._entrypoint"
"hmmer_report.py" = "domainator:hmmer_report._entrypoint"
"hmmer_search.py" = "domainator:hmmer_search._entrypoint"
"hmmer_select.py" = "domainator:hmmer_select._entrypoint"
"matrix_report.py" = "domainator:matrix_report._entrypoint"
"partition_seqfile.py" = "domainator:partition_seqfile._entrypoint"
"select_by_cds.py" = "domainator:select_by_cds._entrypoint"
"select_by_coord.py" = "domainator:select_by_coord._entrypoint"
"select_by_contig.py" = "domainator:select_by_contig._entrypoint"
"seq_dist.py" = "domainator:seq_dist._entrypoint"
"sort_contigs.py" = "domainator:sort_contigs._entrypoint"
"summary_report.py" = "domainator:summary_report._entrypoint"
"split_by_cluster.py" = "domainator:split_by_cluster._entrypoint"
"transform_matrix.py" = "domainator:transform_matrix._entrypoint"
"plot_contigs.py" = "domainator:plot_contigs._entrypoint"
"trim_contigs.py" = "domainator:trim_contigs._entrypoint"
"domainator_server" = "domainator.server.cli:main"
