[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "domainator-server"
version = "0.1.0"
description = "Domainator Web Server"
readme = "README.md"
authors = [{ name = "Sean Johnson", email = "sjohnson@nebiolabs.org" }]
requires-python = ">=3.10"
dependencies = [
    "Flask>=2.3",
    "Werkzeug>=2.3",
    "jsonschema>=4.0",
    "psutil>=5.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"domainator_server" = [
    "templates/*.html",
    "static/*.js",
    "static/*.css"
]

[project.scripts]
domainator-server = "domainator_server.cli:main"
